# FreeClash

./: .gitignore  Agent.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: frontend-refactor-design-plan.md
scripts/: set-version.mjs
src/: App.vue  api.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_api.rs  lib.rs  main.rs  manager.rs  metrics.rs  mihomo.rs  models.rs  proxy.rs
src/components/channels/: ChannelCard.vue
src/components/common/: ConfirmDialog.vue  ToastHost.vue
src/components/dialogs/: RuleDiagnosticsDialog.vue  RuleDialog.vue  SubscriptionDialog.vue
src/components/layout/: AppShell.vue  SideNav.vue  StatusPane.vue  TopBar.vue
src/utils/: clipboard.ts  format.ts
src/views/: RulesView.vue  SubscriptionsView.vue
