[package]
name = "freeclash"
version = "0.1.0"
description = "Application-level mihomo proxy launcher"
authors = ["FreeClash"]
edition = "2021"

[lib]
name = "freeclash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "freeclash"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["image-ico", "tray-icon"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
